fix: text align

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   max-width: 550px;
 }
 
+#app p {
+  text-align: left;
+}
+
 #app a {
   color: #fff;
 }
